syntax = "proto3";

package foobar.user;

message User {
    string username = 1;
}

message UserInfo {

}